@@ -199,9 +199,9 @@ verilog/inc1.v:145: // macro call with , in {}
 verilog/inc1.v:146: 
 verilog/inc1.v:147:  
 verilog/inc1.v:148: $blah("ab,cd","e,f");
-verilog/inc1.v:149: $blah(this.log,vec);
-verilog/inc1.v:150: $blah(this.log,vec[1,2,3]);
-verilog/inc1.v:151: $blah(this.log,{blah.name(), " is not foo"});
+verilog/inc1.v:149: $blah(this.logfile,vec);
+verilog/inc1.v:150: $blah(this.logfile,vec[1,2,3]);
+verilog/inc1.v:151: $blah(this.logfile,{blah.name(), " is not foo"});
 verilog/inc1.v:152: 
 verilog/inc1.v:153: //======================================================================
 verilog/inc1.v:154: // pragma/default net type
@@ -209,4 +209,17 @@ verilog/inc1.v:155:
 verilog/inc1.v:156: `pragma foo = 1
 verilog/inc1.v:157: `default_nettype none
 verilog/inc1.v:158: `default_nettype uwire
-verilog/inc1.v:159: `line 159 "verilog/inc1.v" 2
+verilog/inc1.v:159: 
+verilog/inc1.v:160: //======================================================================
+verilog/inc1.v:161: // bug84
+verilog/inc1.v:162: 
+verilog/inc1.v:165:  // Hello, comments MIGHT not be legal/*more,,)cmts*/// But newlines ARE legal... who speced THAT?
+verilog/inc1.v:165: 
+verilog/inc1.v:165: 
+verilog/inc1.v:166: (p,q)
+verilog/inc1.v:167: //Here
+verilog/inc1.v:168: 
+verilog/inc1.v:169: //Too
+verilog/inc1.v:170: (x,y     )
+verilog/inc1.v:171: Line: 171
+verilog/inc1.v:172: `line 172 "verilog/inc1.v" 2
