@@ -298,9 +298,9 @@ verilog/inc1.v:145:  /*CMT*/
 verilog/inc1.v:146: 
 verilog/inc1.v:147:  
 verilog/inc1.v:148: $blah("ab,cd","e,f");
-verilog/inc1.v:149: $blah(this.log,vec);
-verilog/inc1.v:150: $blah(this.log,vec[1,2,3]);
-verilog/inc1.v:151: $blah(this.log,{blah.name(), " is not foo"});
+verilog/inc1.v:149: $blah(this.logfile,vec);
+verilog/inc1.v:150: $blah(this.logfile,vec[1,2,3]);
+verilog/inc1.v:151: $blah(this.logfile,{blah.name(), " is not foo"});
 verilog/inc1.v:152: 
 COMMENT: //======================================================================
 verilog/inc1.v:153:  /*CMT*/ 
@@ -310,4 +310,26 @@ verilog/inc1.v:155:
 verilog/inc1.v:156: `pragma foo = 1
 verilog/inc1.v:157: `default_nettype none
 verilog/inc1.v:158: `default_nettype uwire
-verilog/inc1.v:159: `line 159 "verilog/inc1.v" 2
+verilog/inc1.v:159: 
+COMMENT: //======================================================================
+verilog/inc1.v:160:  /*CMT*/ 
+COMMENT: // bug84
+verilog/inc1.v:161:  /*CMT*/ 
+verilog/inc1.v:162: 
+COMMENT: // Hello, comments MIGHT not be legal
+COMMENT: /*more,,)cmts*/
+COMMENT: // But newlines ARE legal... who speced THAT?
+verilog/inc1.v:165:   /*CMT*/  /*CMT*/  /*CMT*/ 
+verilog/inc1.v:165: 
+verilog/inc1.v:165: 
+verilog/inc1.v:166: (p,q)
+COMMENT: //Here
+verilog/inc1.v:167: 
+verilog/inc1.v:168: 
+COMMENT: //Too
+verilog/inc1.v:169: 
+COMMENT: /*CMT*/
+COMMENT: /*CMT*/
+verilog/inc1.v:170: ( /*CMT*/  	      x,y     /*CMT*/    )
+verilog/inc1.v:171: Line: 171
+verilog/inc1.v:172: `line 172 "verilog/inc1.v" 2
